# python_cli_template

./: CHANGELOG.md  README.md  index.html  pyproject.toml  python_cli_template.html  search.js
.github/: CONTRIBUTING.md  mergify.yml
.github/workflows/: build.yml  docs.yml  release-please.yml  release.yml  test.yml
src/python_cli_template/: __init__.py  cli.py
tests/: test_template.py
tests/python_cli_template/: test_cli.py  test_template.py
