[project]
name = "python_cli_template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python CLI Template"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.scripts]
python_cli_template = "python_cli_template.cli:main"

[project.entry-points."pipx.run"]
python_cli_template = "python_cli_template.cli:main"

[project.optional-dependencies]
build = [
    "build==1.3.0",
    "pyinstaller==6.16.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==15.0.4",
]
lint = [
    "black==25.9.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
    "ruff==0.13.0",
]
test = [
    "coverage==7.10.6",
    "pytest==8.4.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python_cli_template"
Issues = "https://github.com/remarkablemark/python_cli_template/issues"

[tool.black]
fast = true

[tool.coverage.run]
omit = [
    "/tmp/*",
]
